# legacy

./: .clang-format  .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  INSTALL  README.md  contract_refactor.kdev4
contracts/: CMakeLists.txt  testprc.sh  testrick.sh
contracts/curve.old/: CMakeLists.txt  curve.sx.cpp  curve.sx.hpp
contracts/datapreproc/: CMakeLists.txt  datapreproc.wasm
contracts/datapreproc/src/: datapreproc.cpp  datapreproc.hpp
contracts/delphipoller/: CMakeLists.txt
contracts/delphipoller/src/: delphioracle.hpp  delphipoller.cpp  delphipoller.hpp
contracts/eosio.token/: CMakeLists.txt
contracts/microauction/: CMakeLists.txt
contracts/microauction/src/: microauction.cpp  microauction.hpp
contracts/oracle/: .updater_boideos.js.kate-swp  .updater_eosusd.js.kate-swp  .updater_iqeos.js.kate-swp  .updater_vigeos.js.kate-swp  CMakeLists.txt  updater_boideos_const.js  updater_boxeos.js  updater_boxeos_const.js  updater_btcusd.js  updater_btcusd_const.js  updater_eosusd_const.js  updater_eosvigor.js  updater_eosvigor_const.js  updater_ethusd.js  updater_ethusd_const.js  updater_iqeos_const.js  updater_vigeos.js  updater_vigeos_const.js  updater_vigoreos.js  updater_vigoreos_const.js
contracts/oracle/src/: oracle.cpp  oracle.hpp
contracts/swap.defi/: CMakeLists.txt  swap.defi.cpp  swap.defi.hpp
contracts/vigoraclehub/: CMakeLists.txt  package-lock.json  package.json  updater_boideos.js  updater_eosusd_main.js  updater_iqeos.js  updater_vigeos_newdex_main.js  updater_vigeos_whaleex_main.js  updater_vigoreos_main.js
contracts/vigoraclehub/src/: curve.sx.hpp  daccustodian.hpp  oraclehub.cpp  oraclehub.hpp  oraclehub_tables.hpp  swap.defi.hpp
contracts/vigorlending/: CMakeLists.txt
contracts/vigorlending/ricardian/: vigorlending.contracts.md.in
contracts/vigorlending/src/: asset_container.hpp  common.hpp  croneos.hpp  daccustodian.hpp  debug.cpp  debug.hpp  limits.hpp  main100.txt  reputation.hpp  table.hpp  test100.txt  vigorlending copy 2.cpp  vigorlending copy 3.cpp  vigorlending copy 4.cpp  vigorlending copy 5.cpp  vigorlending copy.cpp  vigorlending copy3.hpp  vigorlending copy4.hpp  vigorlending.cpp  vigorlending.hpp  vigorlending_Feb18.cpp
contracts/vigorsxcurve/: CMakeLists.txt  curve.sx.cpp  curve.sx.hpp
contracts/vigorsxcurve/include/sx.utils/: utils.hpp
contracts/vigorsxzap11/: CMakeLists.txt  common.hpp  zap.sx.cpp  zap.sx.hpp
scripts/: abiMod.abi  accounts.js  constructMsig.js  constructMsig2.js  debugBailouts.js  deploy-vigoraclehub.sh  deploy-vigorlending.sh  devqDeploy  encodeContractData.js  eosioConfig.js  eosjs.js  install_eosio.sh  log.js  package-lock.json  package.json  qDeploy.js  vigworker.js
scripts/daccustodia1/: proposeMsig.js  test.js  whitelistData.js
scripts/daccustodia1/migrate/: abiMod.abi  migrate.js  writemnConfig.js
scripts/daccustodia1/migrate/contracts/: vigorlending-premigrate.wasm  vigorlending.wasm
scripts/oracle/: addPairData.js  do.js  oracle-pusher.js
scripts/vigorlending/: customConfig.js  do.js  fullKick.js  initConfig.js  msigProposals.txt  msigProposalsExisting.txt  proposeMsig.js
scripts/vigorlending/migrate/: abiMod.abi  migrate.js  mnConfig.json  setConfig.js
scripts/vigorlending/migrate/contracts/: vigorlending-premigrate.abi  vigorlending.abi
tests/: nodeos_start  package-lock.json  package.json  readme.md
tests/config/: config.json.in
tests/eosio/config/: config.ini
tests/eosio_contracts/eosio.bios/: eosio.bios.abi
tests/eosio_contracts/eosio.msig/: eosio.msig.abi
tests/eosio_contracts/eosio.system/: eosio.system.abi  rex.results.abi
tests/eosio_contracts/eosio.token/: eosio.token.abi
tests/eosio_contracts/eosio.wrap/: eosio.wrap.abi
tests/expected/: abi_packed.json  abidata.json  abitest.json  config.json  data.json  globals.json  unitdefinitions.sh  wasmdata.json  wasmtest.json  wastmtest.txt
tests/expected/borrow/: step_0.globals  step_0.users  step_1.globals  step_1.users  step_10.globals  step_10.users  step_11.globals  step_11.users  step_12.globals  step_12.users  step_13.globals  step_13.users  step_14.globals  step_14.users  step_16.globals  step_16.users  step_2.globals  step_2.users  step_3.globals  step_3.users  step_4.globals  step_4.users  step_5.globals  step_5.users  step_6.globals  step_6.users  step_7.globals  step_7.users  step_9.globals  step_9.users
tests/spec/: vigor-spec.js
tests/spec/helpers/: __init_helper.js  __nodeos_init_helper.js  tests_helper.js
